# tender

./: .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
tender/: __init__.py  __main__.py
