[build-system]
requires = [
  "setuptools >= 41.0.0",
  "setuptools_scm >= 1.15.0",
  "setuptools_scm_git_archive >= 1.0",
  "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py36"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
