# -*- coding: utf-8 -*-
[metadata]
name = tender
description = tender
long_description = file: README.md
long_description_content_type = text/markdown
keywords = github
maintainer = Sorin Sbarnea
author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
maintainer-email = sorin.sbarnea@gmail.com
url = https://github.com/pycontribs/tender
project_urls =
    Source=https://github.com/pycontribs/tender
    Tracker=https://github.com/pycontribs/tender
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    blessings
    click
    click-help-colors >= 0.8
    humanize
    packaging
    pygments
    pygithub
    pyyaml
    requests
    gitpython
    git-url-parse

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    tender=tender.__main__:cli

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-html
    pytest-plus
    pytest-xdist

[bdist_wheel]
universal = 1

[flake8]
max-complexity = 22
max-line-length = 99
ignore = E203, W503, C901, E402, B011, D

[pep8]
max-line-length = 99
